...
            TextEditor(text: $summarizedText)
                .font(.custom(fontName, size: fontSize))
                .padding(.horizontal)

            HStack {
                Button(action: {}) {
                    Text("Clear")
                }

                Spacer()

                HStack {
                    Slider(value: $summaryRatio, in: 0.0 ... 1.0)
...
                .background(
                    RoundedRectangle(cornerRadius: 8, style: .continuous)
                        .foregroundColor(colorScheme == .light ? .secondaryLightGray : .clear)
                )

                Button(action: {}) {
                    Text("Summarize")
                }

                Button(action: {}) {
                    Image(systemName: "doc.on.doc")
                }
            }
...
